# pokemon-tcg-sdk-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  EXAMPLECMakeLists.txt  README.md
include/: API-URLS.hpp  Api.hpp  Card.hpp  Legalities.hpp  Query.hpp  Rarities.hpp  Set.hpp  SubTypes.hpp  SuperTypes.hpp  Types.hpp  pokemon-tcg-sdk.hpp
include/api/: Query.hpp  URLS.hpp
src/: Api.cpp  Card.cpp  Legalities.cpp  Rarities.cpp  Set.cpp  SubTypes.cpp  SuperTypes.cpp  Types.cpp
src/api/: Query.cpp
tests/: test.cpp
